assets/css/style.css
body {
  color: #666666;
  font-family: 'Montserrat', sans-serif;
}

/**LANDING PAGE**/
#landingpage {
  background-image: url(../img/studio-with-lights.jpeg);
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  margin-top:55px;
  height: 600px;
}

#overlay{
  background-color: rgba(255, 255, 255, 0.6);
  height: 600px;
}

#landingpage-text {
  font-weight: bolder;
  text-align: center;
  padding: 10px;
  color: #333;
  text-transform: uppercase;
  margin-top: 200px;
  bottom: 300px;
}

#landingpage-text h1 {
  font-size: 5rem;
}

.muted {
 color: #666;
}

#landingpage-text h2 {
  font-size: xx-large;
}

#landingpage-text h3 {
  font-size: x-large;
}

/** ABOUT SECTION**/

#about-content {
  padding: 50px;
  background-color: #7e7e7e; 
}

#bio h1, p {
  color: #333;
}

/**SHOWREEL**/
#showreel {
  padding: 100px;
  background-color: #333;
}

@media screen and (max-width: 768px){
  #showreel {
    padding: 50px;
  }
}

/**EXPERIENCE**/
#experience {
  height: auto;
  background-image: url(../img/white-photo-studio.jpeg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  height: 100%;
}

#experience-boxed {
  margin: 150px;
  border: 1px solid #000;
  background-color: rgba(255, 255, 255, 0.9);
  padding: 40px;
  overflow: hidden;
}

#jobs {
  padding: 10px;
}

.btn {
  border: 3px solid #333;
  border-radius: 12px;
  width: 100%;
  height: 100px;
  background-color: #7e7e7e;
  overflow: hidden;
}

.muted {
  color: #ccc;
}

/**SOCIAL MEDIAS**/
#socials {
  background-color: #333;
  color: #999999;
  margin-bottom: 0;
  padding: 100px;
}

#socialmedia {
  text-align: center;
}

.icon {
  text-align: center;
  font-size: 6rem;
  padding: 50px;
}

@media screen and (max-width:768px){
  .icon {
    font-size: 3rem;
    padding: 15px;
  }
}

@media screen and (max-width:768px){
  #socials {
    padding: 50px;
  }
}
/**CONTACT PAGE**/
  #contact-page {
    background-image: url(../img/eoghan-in-croke-park.jpg);
    background-attachment: fixed;
    background-color: #ccc;
    background-position: top;
    height: 700px;
    background-size: cover;
    background-repeat: no-repeat;
  } 
  
  #contact-form {
    margin-top: 75px;
    margin-bottom: 75px;
    height: auto;
  }

  .contact-form-boxed {
    border: #000000;
    border-style: solid;
    background-color: whitesmoke;
    opacity: 0.8;
    padding: 40px;
  }

  .contact-form-boxed {
    text-align: center;
  }

  .contact-form-boxed h1 {
    text-transform: uppercase;
    font-weight: bold;
  }

  input {
    width: 100%;
    margin-bottom: 20px;
  }

  input[type=text] {
    border: none;
    border-bottom: 2px solid #000;
    background-color: whitesmoke;
    color: slategray;
    font-size: x-small;
    max-width: 300px;
  }

  input[type=text]:hover {
    border-bottom: 4px solid #000;
    max-width: 300px;
  }

  input[type=email] {
    border: none;
    border-bottom: 2px solid #000;
    background-color: whitesmoke;
    color: slategray;
    font-size: x-small;
    max-width: 300px;
  }

  input[type=email]:hover {
    border-bottom: 4px solid #000;
  }

#subject {
  border: 2px solid #000;
  background-color: white;
  height: 300px;
  text-align: justify;
  resize: none;
  padding: 10px;
}

textarea {
  width: 100%;
  padding: 12px;
  border: 2px solid #000;
}

input[type="submit"] {
  background-color: #999999;
  color: whitesmoke;
  float: right;
  width: 33%;
  cursor: grab;
  border: 2px solid #000;
}

input[type="submit"]:hover {
  background-color: whitesmoke;
  color: #333;
  border: 2px solid #333;
}
/**FOOTER**/

.footer {
  position: sticky;
  left: 0%;
  bottom: 0%;
  width: 100%;
  background-color: #333;
  color: lightgray;
  text-align: center;
}

a {
  color: lightgray;;
  text-decoration: none;
}

a:hover {
  color: lightgray;;
  text-decoration: underline;
  text-transform: uppercase;
}

.footer-items {
    font-size: x-small;
    padding-top: 10px;
    padding-bottom: 10px;
}

/**GALLERY**/

#gallery {
  margin-top: 90px;
  margin-bottom: 75px;
}

#gallery  h2{
  padding: 25px;
}
.img-area{
  overflow: hidden;
  position: relative;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-inline-flexbox;
  display: -o-flex;
  display: flex;
  margin-bottom: 30px;
  justify-content: center;
  align-items: center;
}

.img-area img {
  width: 100%;
  height: 400px;
}
.img-area img.large {
  width: 100%;
  height: 830px;
}
  

